
===============
Version 0.11.0
===============

* Fixed vapi installation, honoring vala pc file
* Fixed Bug #760568
* Fixed Bug #769363
* Removed Node.childs
* DOM4 implementation:
    API Changes:
        * Node.children now is Node.children_nodes
        * Element.set_ns_attr now use string for namespace, considering if prefix is included in URI.
    API Addintions:
        * DOM4 interfaces
        * DOM4 collection implementations
        * Node: get_elements_by_name (), get_elements_by_name_ns ()
    Implementations:
        * GNode series implement DOM4 interfaces
* New and updated translations:
    Updated Serbian     by Мирослав Николић <miroslavnikolic@rocketmail.com>
    Updated Czech       by Marek Černocký <marek@manet.cz>
    Updated Polish      by Piotr Drąg <piotrdrag@gmail.com>
    Updated Hungarian   by Balázs Meskó <meskobalazs@gmail.com>
    Updated Spanish     by Daniel Mustieles <daniel.mustieles@gmail.com>
    Added Indonesian    by Andika Triwidada <atriwidada@gnome.org>
* TNode based classes API changes:
    * TDocument.read_doc_stream() now throws GLib.Error
* Reducing number of warnings at valac compilation time
* Bump version of required VALAC to 0.32, due to use of [Version] annotation

===============
Version 0.10.0
===============

* New and updated translations:
    Added zh_CN         by Yating Kuang <yatingkuang@ubuntukylin.com>
    Updated Swedish     by Anders Jonsson <anders.jonsson@norsjovallen.se>
    Updated German      by Mario Blättermann <mario.blaettermann@gmail.com>
    Updated Brazilian Portuguese by Enrico Nicoletto <liverig@gmail.com>
    Updated Czech       by Marek Černocký <marek@manet.cz>
    Updated Serbian     by Марко М. Костић <marko.m.kostic@gmail.com>
    Updated Hungarian   by Balázs Meskó <meskobalazs@gmail.com>
    Updated Polish      by Piotr Drąg <piotrdrag@gmail.com>


===============
Version 0.9.92
===============

* New contructor methods for TDocument using custome ReadTypeFunc
* Bug fixes