@@ -52,6 +52,7 @@ namespace GXml {
 	 * Version: DOM Level 1 Core<<BR>>
 	 * URL: [[http://www.w3.org/TR/REC-DOM-Level-1/level-one-core.html#ID-B63ED1A3]]
 	 */
+	[Version (deprecated=true, deprecated_since="0.12", replacement="GDocumentFragment")]
 	public class DocumentFragment : BackedNode { // TODO: Create DomDocumentFragment interface
 		internal DocumentFragment (Xml.Node *fragment_node, xDocument doc) {
 			base (fragment_node, doc);
