@@ -41,6 +41,7 @@ namespace GXml {
 	 * Version: DOM Level 1 Core<<BR>>
 	 * URL: [[http://www.w3.org/TR/DOM-Level-1/level-one-core.html#ID-745549614]]
 	 */
+	[Version (deprecated=true, deprecated_since="0.12", replacement="GElement")]
 	public class xElement : BackedNode, GXml.Element {
 		string _content = null;
 	
