@@ -2,6 +2,7 @@ namespace GXml {
 	/**
 	 * libmxl2 bindings for Errors on parse and write.
 	 */
+	[Version (deprecated=true, deprecated_since="0.12", replacement="use GLib.Error exceptions")]
 	public errordomain Error {
 		NOT_SUPPORTED, /* TODO: GET RID OF THIS */
 		PARSER, WRITER;
