@@ -40,6 +40,7 @@ namespace GXml {
 	 * Version: DOM Level 1 Core<<BR>>
 	 * URL: [[http://www.w3.org/TR/REC-DOM-Level-1/level-one-core.html#ID-1312295772]]
 	 */
+	[Version (deprecated=true, deprecated_since="0.12", replacement="GText")]
 	public class xText : xCharacterData, GXml.Text {
 		internal xText (Xml.Node *text_node, xDocument doc) {
 			base (text_node, doc);
